# wolfssl-rs

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN-PKIX.md  PLAN-wolfcrypt-tls-tokio.md  PLAN-wolfhsm.md  README.md  iaj1gfmjlhjhmuqpctdstbj3s0bpu7uk  manifest  pb5qhmfu7semd2bncaksfkb1kcceplgg.darc  rustcrypto-issue-drafts.md  rustcrypto-trait-gaps.md  ttjgdijsicmmng6csfhm1ip90ddkfnfv.darc  wolfssl-c-api-gaps.md
links-testing/: Cargo.toml  README.md  build.rs
links-testing/src/: main.rs  testing.c
ssh-key-wolfcrypt/: CHANGELOG.md  Cargo.toml  README.md
ssh-key-wolfcrypt/src/: algorithm.rs  certificate.rs  dot_ssh.rs  error.rs  lib.rs  ppk.rs  private.rs  public.rs  signature.rs  sshsig.rs
ssh-key-wolfcrypt/tests/: certificate.rs  certificate_builder.rs  private_key.rs  sshsig.rs  wolfcrypt_backend.rs
wolfcrypt/: Cargo.toml  README.md  build.rs
wolfcrypt-conformance/: Cargo.toml  README.md  build.rs
wolfcrypt-conformance/src/: lib.rs
wolfcrypt-conformance/tests/: aead.rs  canary.rs  cavp_cmac.rs  cavp_digest.rs  chacha20.rs  cipher_cbc.rs  cipher_cfb.rs  cipher_ctr.rs  cipher_ecb.rs  cmac.rs  des3.rs  digest.rs  ecdsa.rs  ed25519.rs  ed448.rs  hkdf.rs  hmac.rs  mldsa.rs  mlkem.rs  pbkdf2.rs  poly1305.rs  rfc_chacha20poly1305.rs  rfc_ed25519.rs  rfc_ed448.rs  rfc_hkdf.rs  rfc_poly1305.rs  rfc_x25519.rs  rfc_x448.rs  rsa.rs  rsa_pkcs1v15_baseline.rs  shake.rs  test_count.rs  tls_prf.rs  wycheproof_aead.rs  wycheproof_ecdh.rs  wycheproof_ecdsa.rs  wycheproof_eddsa.rs  wycheproof_hkdf.rs  wycheproof_keywrap.rs  wycheproof_mac.rs  (+4 more)
wolfcrypt-conformance/vectors/: README.md
wolfcrypt-dpe/: Cargo.toml  README.md
wolfcrypt-dpe-conformance/: Cargo.toml  README.md
wolfcrypt-dpe-conformance/src/: lib.rs
wolfcrypt-dpe-conformance/tests/: alias_key.rs  canary.rs  cert_chain.rs  cert_dice_extensions.rs  cert_signature.rs  cert_structure.rs  dpe_certify.rs  dpe_cross_backend.rs  dpe_derive.rs  dpe_destroy.rs  dpe_get_chain.rs  dpe_get_profile.rs  dpe_init.rs  dpe_multi_context.rs  dpe_negative.rs  dpe_rotate.rs  dpe_sign.rs  exported_cdi.rs  hash_equiv.rs  hasher_contract.rs  hkdf_equiv.rs  keypair_equiv.rs  pubkey_serial.rs  rng_contract.rs  sign_cross.rs  test_count.rs  upstream_dpe_tests.rs
wolfcrypt-dpe-hw/: Cargo.toml  FIPS_BOUNDARY.md  README.md  build.rs
wolfcrypt-dpe-hw/audit/: phase2_link_probe.txt  phase3_link_probe.txt
wolfcrypt-dpe-hw/src/: caliptra_seed.c  hw_aes.rs  hw_hash.rs  hw_pk.rs  hw_rng.rs  lib.rs  test_support.rs
wolfcrypt-dpe-hw/tests/: link_probe.rs  link_probe_aes.rs  link_probe_hash.rs  link_probe_integration.rs  link_probe_pk.rs  link_probe_rng.rs  phase0_scaffold.rs  phase1_hash.rs  phase2_rng.rs  phase3_aes.rs  phase4_ecc.rs  phase4_mldsa.rs  phase5_integration.rs
wolfcrypt-dpe/src/: ecdsa.rs  error.rs  hash.rs  hkdf.rs  lib.rs  rng.rs
wolfcrypt-dpe/tests/: dpe_integration.rs  kat_ecdsa.rs  kat_hash.rs  kat_hkdf.rs  kat_rng.rs  smoke_test.rs
wolfcrypt-ring-compat/: Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  build.rs
wolfcrypt-ring-compat/examples/: cipher.rs  digest.rs
wolfcrypt-ring-compat/src/: aead.rs  agreement.rs  bn.rs  buffer.rs  cbb.rs  cipher.rs  cmac.rs  constant_time.rs  debug.rs  digest.rs  ec.rs  ed25519.rs  encoding.rs  endian.rs  error.rs  evp_pkey.rs  fips.rs  hex.rs  hkdf.rs  hmac.rs  io.rs  iv.rs  kdf.rs  kem.rs  key_wrap.rs  lib.rs  pbkdf2.rs  pkcs8.rs  pqdsa.rs  ptr.rs  rand.rs  rsa.rs  signature.rs  test.rs  tls_prf.rs  unstable.rs
wolfcrypt-ring-compat/tests/: aead_test.rs  agreement_test.rs  basic_aead_test.rs  basic_openssh_test.rs  basic_quic_test.rs  basic_rsa_test.rs  cipher_test.rs  cmac_tests.rs  constant_time_test.rs  digest_test.rs  ecdsa_tests.rs  ed25519_tests.rs  error_test.rs  hkdf_test.rs  hmac_test.rs  kdf_test.rs  key_wrap_test.rs  pbkdf2_test.rs  pqdsa_test.rs  quic_test.rs  rand_test.rs  rsa_test.rs  signature_test.rs  tls_prf_test.rs  unsealed_rand_test.rs  wolfssl_kat.rs
wolfcrypt-ring-compat/util/: process-criterion-csv.rs
wolfcrypt-ring-testing/: Cargo.toml  README.md
wolfcrypt-ring-testing/benches/: aead_benchmark.rs  agreement_benchmark.rs  cipher_benchmark.rs  digest_benchmark.rs  ecdsa_benchmark.rs  ed25519_benchmark.rs  hkdf_benchmark.rs  hmac_benchmark.rs  kem_benchmark.rs  pbkdf2_benchmark.rs  quic_benchmark.rs  rsa_benchmark.rs
wolfcrypt-ring-testing/tests/: aead_test.rs  agreement_tests.rs  hkdf_test.rs  quic_test.rs  rsa_test.rs
wolfcrypt-rs/: Cargo.toml  Makefile  README.md  build.rs
wolfcrypt-rs/src/: compat_shim.c  lib.rs
wolfcrypt-rs/tests/: aead_shim_tests.rs  links.rs  rsa_lifecycle.rs  sanity-tests.rs  shim_tests.rs
wolfcrypt-tls/: Cargo.toml  README.md
wolfcrypt-tls-futures-io/: Cargo.toml  README.md
wolfcrypt-tls-futures-io/src/: acceptor.rs  bridge.rs  connector.rs  error.rs  lib.rs  stream.rs
wolfcrypt-tls-futures-io/tests/: client_server.rs  tls12.rs  tls13.rs
wolfcrypt-tls-tokio/: Cargo.toml  README.md
wolfcrypt-tls-tokio/src/: acceptor.rs  bridge.rs  connector.rs  error.rs  lib.rs  stream.rs
wolfcrypt-tls-tokio/tests/: client_server.rs  tls12.rs  tls13.rs
wolfcrypt-tls/src/: callback.rs  certificate.rs  client.rs  config.rs  config_holder.rs  error.rs  lib.rs  protocol.rs  server.rs
wolfcrypt-tls/tests/: tls_client.rs  tls_server.rs
wolfcrypt-wrapper/: CHANGELOG.md  Cargo.toml  README.md  build.rs  headers.h
wolfcrypt-wrapper/src/: aes.rs  blake2.rs  chacha20_poly1305.rs  cmac.rs  curve25519.rs  dh.rs  dilithium.rs  ecc.rs  ed25519.rs  ed448.rs  hkdf.rs  hmac.rs  kdf.rs  lib.rs  lms.rs  mlkem.rs  prf.rs  random.rs  rsa.rs  sha.rs  sys.rs
wolfcrypt-wrapper/tests/: test_aes.rs  test_blake2.rs  test_cmac.rs  (+17 more)
wolfhsm/: Cargo.toml  README.md
wolfhsm-src/: Cargo.toml  README.md  build.rs
wolfssl-src/: Cargo.toml  README.md  riscv_bare_metal_helpers.c  user_settings.h  user_settings_asm.h  user_settings_cryptocb_only.h  user_settings_cryptocb_pure.h  user_settings_riscv.h
wolftpm/: Cargo.toml  README.md
wolftpm-src/: Cargo.toml  README.md  build.rs
wolftpm-tss/: Cargo.toml  README.md
(+712 files in other folders)
