[package]
name = "wolfcrypt-conformance"
authors = ["WolfSSL Inc"]
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Cross-validation and trait conformance tests for wolfcrypt"
homepage = "http://wolfssl.com"
repository = "https://github.com/wolfSSL/wolfssl-rs"
readme = "README.md"
keywords = ["wolfcrypt", "wolfssl", "fips", "testing", "cryptography"]
categories = ["cryptography"]
exclude = ["third_party/**", "vectors/**"]

[lib]
# Test-only crate; lib.rs exists only so integration tests can share helpers
path = "src/lib.rs"

[dependencies]
# NOT used at runtime — this crate is test-only. Listed here (not in
# dev-dependencies) solely so build.rs can read DEP_WOLFSSL_CFGS metadata.
# Cargo only exposes `links` metadata to build scripts of direct dependents,
# and dev-dependencies don't qualify.
wolfcrypt-rs = { version = "0.1.1", path = "../wolfcrypt-rs" }

[dev-dependencies]
# === Wolf side ===
wolfcrypt = { version = "0.1.1", path = "../wolfcrypt", features = [
    "digest", "hmac", "cmac", "hkdf", "pbkdf2", "aead", "cipher",
    "poly1305", "signature", "ecdsa", "ed25519", "ed448", "rsa",
    "mldsa", "mlkem", "keywrap", "dh", "des3", "ecdh", "rand",
    "shake", "kdf",
] }

# === Pure-Rust RustCrypto implementations ===
# Versions verified compatible with trait crate versions used by
# wolfcrypt (digest 0.10, cipher 0.4, aead 0.5, signature 2.2).
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
cmac = "0.7"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ctr = "0.9"
cfb-mode = "0.8"
chacha20 = "0.9"
des = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
p521 = { version = "0.13", features = ["ecdsa"] }
# rsa = "0.9"  # TODO: add cross-validation tests against pure-Rust RSA
hkdf = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
poly1305 = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
# ml-dsa = "0.0.4"  # Disabled: too early (0.0.x), API unstable
# ml-kem = "0.2"    # Disabled: depends on pre-release kem 0.3.0-pre.0

# === Shared trait crates (must match wolfcrypt's versions) ===
digest = "0.10"
cipher = "0.4"
aead = { version = "0.5", features = ["alloc"] }
signature = "2.2"
ed25519 = "2.2"
crypto-common = "0.1"
generic-array = "0.14"
typenum = "1"
universal-hash = "0.5"
elliptic-curve = "0.13"

# === Test infrastructure ===
rand = "0.8"
rand_core = "0.10"
hex-literal = "0.4"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
