[package]
name = "wolfcrypt-dpe"
authors = ["WolfSSL Inc"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Caliptra DPE Crypto trait implementation backed by wolfCrypt"
homepage = "http://wolfssl.com"
repository = "https://github.com/wolfSSL/wolfssl-rs"
keywords = ["wolfcrypt", "wolfssl", "fips", "caliptra", "dpe"]
categories = ["cryptography"]
# Not published to crates.io yet: the caliptra-dpe-crypto trait crate
# (package = "crypto" in https://github.com/chipsalliance/caliptra-dpe)
# is only available as a git dependency; crates.io rejects published crates
# with git entries in [dependencies].  Once chipsalliance publishes that
# crate, switch the dep to a versioned form and remove this flag.
publish = false

[lib]
name = "wolfcrypt_dpe"

[features]
riscv-bare-metal = ["wolfcrypt/riscv-bare-metal"]
cryptocb-only = ["wolfcrypt/cryptocb-only"]
cryptocb-pure = ["wolfcrypt/cryptocb-pure"]
# Propagates wolfcrypt/require-dev-id: removes WolfRng::new() (software DRBG path)
# so only WolfRng::new_with_dev_id is callable.  When enabled, construct
# WolfCryptDpeImpl via new_with_rng_dev_id() to supply the CryptoCb device ID.
require-dev-id = ["wolfcrypt/require-dev-id"]

[dependencies]
# wolfcrypt from the local workspace -- the ONLY crypto dependency
wolfcrypt = { version = "0.1.0", path = "../wolfcrypt", default-features = false, features = [
    "digest", "hkdf", "ecdsa", "rand",
] }

# RustCrypto traits used in the public/internal API
digest_trait = { package = "digest", version = "0.10", default-features = false }
signature_trait = { package = "signature", version = "2.2", default-features = false }
rand_core = { version = "0.10", default-features = false }

# Constant-time comparison
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }

# caliptra-dpe crypto trait -- pinned to exact commit (fw-2.1.0)
caliptra-dpe-crypto = { git = "https://github.com/chipsalliance/caliptra-dpe", rev = "cfc9a713882ca562a0ae6565198129e6da121a42", package = "crypto", default-features = false }

[dev-dependencies]
hex = "0.4"

# DPE engine + platform for integration tests (same pinned commit as crypto trait)
caliptra-dpe = { git = "https://github.com/chipsalliance/caliptra-dpe", rev = "cfc9a713882ca562a0ae6565198129e6da121a42", package = "dpe", default-features = false, features = ["p384"] }
caliptra-dpe-platform = { git = "https://github.com/chipsalliance/caliptra-dpe", rev = "cfc9a713882ca562a0ae6565198129e6da121a42", package = "platform", default-features = false, features = ["rustcrypto"] }
caliptra-cfi-lib = { git = "https://github.com/chipsalliance/caliptra-cfi.git", package = "caliptra-cfi-lib", rev = "767d4ef59a106aea683b883c07bd65456fb3ba6b", default-features = false, features = ["cfi-test"] }
