[package]
name = "wolfcrypt-rs"
description = "Low-level FFI bindings for wolfSSL/wolfCrypt cryptographic library."
version = "0.2.0"
authors = ["WolfSSL Inc"]
edition = "2024"
license = "GPL-3.0-only OR LicenseRef-wolfSSL-commercial"
homepage = "http://wolfssl.com"
repository = "https://github.com/wolfSSL/wolfssl-rs"
readme = "README.md"
keywords = ["wolfcrypt", "wolfssl", "fips", "cryptography"]
categories = ["cryptography"]
rust-version = "1.85"
build = "build.rs"
links = "wolfssl"

[dependencies]
wolfcrypt-sys = { version = "0.2.0", path = "../wolfcrypt-sys", default-features = false, features = ["vendored"] }

[features]
default = []
fips = ["wolfcrypt-sys/fips"]
riscv-bare-metal = ["wolfcrypt-sys/riscv-bare-metal"]
cryptocb-only = ["wolfcrypt-sys/cryptocb-only"]
cryptocb-pure = ["wolfcrypt-sys/cryptocb-pure"]

[build-dependencies]
cc = { workspace = true, features = ["parallel"] }
