[package]
name = "wolfcrypt-tls"
authors = ["WolfSSL Inc"]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only OR LicenseRef-wolfSSL-commercial"
keywords = ["wolfcrypt", "wolfssl", "tls", "fips", "cryptography"]
categories = ["cryptography"]
description = "Safe Rust TLS API backed by wolfSSL"
readme = "README.md"
homepage = "http://wolfssl.com"
repository = "https://github.com/MarkAtwood/wolfssl-rs"

# Export as "wolfssl" so downstream code uses `use wolfssl::...`.
# Once we recover the `wolfssl` crate name on crates.io, rename the
# package to `wolfssl` and remove this [lib] override.
[lib]
name = "wolfssl"

[features]
default = []
# Compile wolfSSL from source (requires WOLFSSL_SRC or pkg-config).
vendored = ["wolfcrypt-sys/vendored"]
# Enable wolfSSL FIPS 140-3 code path.
# See the workspace README for FIPS compliance requirements.
fips = ["wolfcrypt-sys/fips"]

[dependencies]
wolfcrypt-sys = { version = "0.2.0", path = "../wolfcrypt-sys" }
zeroize = { workspace = true }

[dev-dependencies]
