[package]
name = "wolfcrypt-wrapper"
authors = ["WolfSSL Inc"]
version = "1.1.4"
edition = "2021"
description = "Rust wrapper for wolfssl C library cryptographic functionality"
license = "GPL-3.0-only OR LicenseRef-wolfSSL-commercial"
homepage = "http://wolfssl.com"
repository = "https://github.com/wolfSSL/wolfssl"
documentation = "https://github.com/wolfSSL/wolfssl/tree/master/wrapper/rust"
keywords = ["wolfcrypt", "wolfssl", "fips", "bindgen", "cryptography"]
categories = ["cryptography", "security", "api-bindings"]
readme = "README.md"

[features]
default = []
std = []
fips = ["wolfcrypt-sys/fips"]

[dependencies]
wolfcrypt-sys = { version = "0.1.3", path = "../wolfcrypt-sys", default-features = false, features = ["vendored"] }

[build-dependencies]
bindgen = { workspace = true }
regex = { workspace = true }
